--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,20 @@
 asgiref==3.3.1
+astroid==2.4.2
+cffi==1.14.4
+cryptography==3.3.1
 Django==3.1.4
 djangorestframework==3.12.2
+iso8601==0.1.13
+isort==5.7.0
+lazy-object-proxy==1.4.3
+m3u8==0.8.0
+mccabe==0.6.1
+numpy==1.19.5
+pycparser==2.20
+pylint==2.6.0
 pytz==2020.5
+six==1.15.0
 sqlparse==0.4.1
+toml==0.10.2
+typed-ast==1.4.2
+wrapt==1.12.1
