--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ lazy-object-proxy==1.4.3
 m3u8==0.8.0
 mccabe==0.6.1
 numpy==1.19.5
+psycopg2-binary==2.8.6
 pycparser==2.20
 pylint==2.6.0
 pytz==2020.5
