--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,42 @@ services:
       dockerfile: Dockerfile
     container_name: photo-explorer-backend
     volumes:
-      - "/mnt/c/Users/alamo/Downloads:/media"
+      - "~/Downloads:/media"
       - "/var/www/photo-explorer/backend:/app"
     networks:
       - photo-explorer-network
     env_file: ./backend/.env
     stdin_open: true
     tty: true
+    devices:
+      - /dev/dri/renderD128:/dev/dri/renderD128
+      - /dev/dri/card0:/dev/dri/card0
     restart: unless-stopped
     # command: cron && python3 manage.py runserver 0.0.0.0:8000
     depends_on:
       - photo-explorer-db
+
+
+  photo-explorer-video-transcode:
+    build:
+      context: ./transcode
+      dockerfile: Dockerfile
+    container_name: photo-explorer-video-transcode
+    volumes:
+      - "~/Downloads:/media"
+      - "/var/www/photo-explorer/transcode:/app"
+    networks:
+      - photo-explorer-network
+    environment: 
+      - FLASK_APP=/app/app.py
+    stdin_open: true
+    tty: true
+    devices:
+      - /dev/dri/renderD128:/dev/dri/renderD128
+      - /dev/dri/card0:/dev/dri/card0
+    restart: unless-stopped
+    # command: flask run
+
 
   photo-explorer-db:
     image: postgres:12
@@ -34,7 +59,7 @@ services:
     image: nginx:1.19
     container_name: photo-explorer-nginx
     volumes:
-      - "/mnt/c/Users/alamo/Downloads:/media"
+      - "~/Downloads:/media"
       - "/var/www/photo-explorer/backend/code:/code"
       - "./nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
     ports:
